--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -1,34 +1,89 @@
-<table class="table">
-
+<table class="table" border = "1 " >
+    <caption class="text-center">{{'material_Planning' | translate}}</caption>
     <thead>
-
     <tr>
-        <th colspan="3" scope="colgroup" class="text-center">Mars</th>
-        <th colspan="1" scope="colgroup">Venus</th>
-        <th colspan="1" scope="colgroup">Jupiter</th>
+        <th colspan="1" class="text-center">{{'num_purchase_part' | translate}}</th>
+        <th colspan="1" class="text-center">{{'delivery_time' | translate}}</th>
+        <th colspan="1" class="text-center">{{'deviation' | translate}}</th>
+        <th colspan="1" class="text-center">{{'sum' | translate}}</th>
+        <th colspan="3" class="text-center">{{'use' | translate}}</th>
+        <th colspan="1" class="text-center">{{'discount_sum' | translate}}</th>
+        <th colspan="1" class="text-center">{{'opening_stock' | translate}}</th>
+        <th colspan="4" class="text-center">{{'gross_requirements_period' | translate}}</th>
+        <th colspan="1" class="text-center">{{'sum_without_order' | translate}}</th>
+        <th colspan="1" class="text-center">{{'volume_ordered' | translate}}</th>
+        <th colspan="1" class="text-center">{{'ordertype' | translate}}</th>
+        <th colspan="4" class="text-center">{{'stock_after_receipt' | translate}}</th>
     </tr>
     <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
         <th scope="col">P1</th>
         <th scope="col">P2</th>
         <th scope="col">P3</th>
         <th scope="col"></th>
         <th scope="col"></th>
-
+        <th>1</th>
+        <th>2</th>
+        <th>3</th>
+        <th>4</th>
+        <th></th>
+        <th></th>
+        <th>E</th>
+        <th>2</th>
+        <th>3</th>
+        <th>4</th>
+        <th>5</th>
     </tr>
     </thead>
 
     <tbody>
     <tr>
-        <td>10,000</td>
-        <td>5,000</td>
-        <td>12,000</td>
-        <td>9,000</td>
+        <!-- 1. Zeile-->
+        <td>21</td>
+        <td>1,8</td>
+        <td>0,4</td>
+        <td>2,2</td>
+        <td>1</td>
+        <td>0</td>
+        <td>0</td>
+        <td>300</td>
+        <td>300</td>
+        <td>150</td>
+        <td>150</td>
+        <td>150</td>
+        <td>150</td>
+        <td>-300</td>
+        <td>-</td>
+        <td>E</td>
+        <td>600</td>
+        <td>700</td>
+        <td>800</td>
+        <td>900</td>
     </tr>
     <tr>
-        <td>reihe</td>
-        <td>reihe</td>
-        <td>reihe</td>
-        <td>reihe</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
     </tr>
     </tbody>
 </table>
