--- a/client/app/components/settings/workstations/workstations.component.html
+++ b/client/app/components/settings/workstations/workstations.component.html
@@ -4,7 +4,7 @@
 <div class="well col-md-3" style="margin-left: 1%; margin-right: 1%;">
     <div class="form-group">
         <label for="ws_nummer">{{'setWorkstations_number' | translate}}</label>
-        <input type="number" [(ngModel)]="nummer" name="nummer" class="form-control" placeholder="{{'setWorkstations_number' | translate}}" id="ws_nummer">
+        <input type="number" min="1" [(ngModel)]="nummer" name="nummer" class="form-control" placeholder="{{'setWorkstations_number' | translate}}" id="ws_nummer">
     </div>
     <div class="form-group">
         <label for="ws_name">{{'setWorkstations_name' | translate}}</label>
