Added DB Service, Changed XML Import

--- a/client/app/components/xmlImport/xmlImport.component.css
+++ b/client/app/components/xmlImport/xmlImport.component.css
@@ -1,3 +1,7 @@
+.leftRightMargin{
+    margin-left: 15px !important;
+    margin-right: 15px !important;
+}
 .breadcrumb {
     padding: 0px;
     background: #D4D4D4;
