--- a/client/app/components/xmlImport/xmlImport.component.html
+++ b/client/app/components/xmlImport/xmlImport.component.html
@@ -18,7 +18,7 @@
         <div class="col-sm-5 col-md-6 col-lg-4">
             <div class="panel panel-default">
                 <div class="panel-heading">XML Import</div>
-                <div class="panel-body">
+                <div class="panel-body" style="min-height: 52px">
                     <input type="file" (change)="changeListener($event)">
                 </div>
             </div>
