--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -79,6 +79,7 @@
             <div class="row header">
                 <div class="col-xs-12">
                     <div class="user pull-right">
+                        <label class="actualPeriodLabel">letzte Periode: {{lastPeriod}}</label>
                         <div class="item dropdown">
                             <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-language"></i>
