--- a/client/app/components/home/home.component.html
+++ b/client/app/components/home/home.component.html
@@ -1,3 +1,62 @@
-<div class="container-fluid">
-        Hallo yppj
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                        <img src="https://cdn.pixabay.com/photo/2014/02/22/11/07/gears-271971_1280.jpg" alt="Image">
+                        <div class="carousel-caption">
+                                <h3>Ibsys 2</h3>
+                                <p>PPS - System</p>
+                        </div>
+                </div>
+
+                <div class="item">
+                        <img src="http://www.foerderland.de/uploads/pics/cykno-e-bike-01_5154.jpg" alt="Image">
+                        <div class="carousel-caption">
+                                <h3>Fahrradproduktion</h3>
+                                <p>Frauen-, Herren- oder Kinderfahrräder</p>
+                        </div>
+                </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+        </a>
 </div>
+
+<div class="container text-center">
+        <h3>What We Do</h3><br>
+        <div class="row">
+                <div class="col-sm-4">
+                        <img src="http://bilder.afterbuy.de/images/48073/2009000000476.jpg" class="img-responsive" style="width:100%" alt="Image">
+                        <p>Räder</p>
+                </div>
+                <div class="col-sm-4">
+                        <img src="http://www.externum.eu/wp-content/uploads/2010/10/sl_lenker1.png" class="img-responsive" style="width:100%" alt="Image">
+                        <p>Exclusive Lenker</p>
+                </div>
+                <div class="col-sm-4">
+                        <div class="well">
+                                <p>Prognosen</p>
+                        </div>
+                        <div class="well">
+                                <p>Kaufteildispo</p>
+                        </div>
+                </div>
+        </div>
+</div><br>
+
+<footer class="container-fluid text-center">
+        <p>Developer: Patrick Stäble, Philipp Köpfer, Jonas Neskudla und Yannik Werth</p>
+</footer>
