--- a/client/app/components/home/home.component.html
+++ b/client/app/components/home/home.component.html
@@ -58,5 +58,5 @@
 </div><br>
 
 <footer class="container-fluid text-center">
-        <p>Developer: Patrick Stäble, Philipp Köpfer, Jonas Neskudla und Yannik Werth</p>
+        <p>Developer: Patrick Stäbler, Philipp Köpfer, Jonas Neskudla und Yannik Werth</p>
 </footer>
