--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -10,6 +10,11 @@
             <li class="sidebar-title"><span>{{'sidebar_taskPlanning' | translate}}</span></li>
             <li class="sidebar-list">
 
+                <a routerLink="/dashboard" routerLinkActive="active">{{'sidebar_dashboard' | translate}}<span class="menu-icon fa fa-tachometer"></span></a>
+
+            </li>
+            <li class="sidebar-list">
+
                 <a routerLink="/xmlImport" routerLinkActive="active">{{'sidebar_readXML' | translate}}<span class="menu-icon fa fa-file-code-o"></span></a>
 
             </li>
