--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="node_modules/rdash-ui/dist/css/rdash.css">
     <link rel="stylesheet" href="app/components/xmlImport/xmlImport.component.css">
     <link rel="stylesheet" href="app/components/capacityPlanning/capacityPlanning.component.css">
+    <link rel="stylesheet" href="app/components/dashboard/dashboard.component.css">
 
 
     <!-- 1. Load libraries -->
