--- a/client/app/components/settings/parts/parts.component.html
+++ b/client/app/components/settings/parts/parts.component.html
@@ -16,6 +16,18 @@
         <input type="number" [(ngModel)]="part.lagerMenge" name="lagermenge" class="form-control" placeholder="Lagermenge" id="part_lagermenge">
     </div>
     <div class="form-group">
+        <label for="part_lieferfrist">Lieferfrist</label>
+        <input type="number" [(ngModel)]="part.lieferfrist" name="lieferfrist" class="form-control" placeholder="Lieferfrist" id="part_lieferfrist">
+    </div>
+    <div class="form-group">
+        <label for="part_abweichung">Abweichung</label>
+        <input type="number" [(ngModel)]="part.abweichung" name="abweichung" class="form-control" placeholder="Abweichung" id="part_abweichung">
+    </div>
+    <div class="form-group">
+        <label for="part_diskontmenge">Diskontmenge</label>
+        <input type="number" [(ngModel)]="part.diskontmenge" name="diskontmenge" class="form-control" placeholder="Diskontmenge" id="part_diskontmenge">
+    </div>
+    <div class="form-group">
         <label for="part_typ">Typ </label>
         <ss-multiselect-dropdown [options]="typOptions" [texts]="multiSelectTexts" [settings]="typSettings"
                                  [(ngModel)]="part.typ" id="part_typ">
@@ -28,7 +40,7 @@
         </ss-multiselect-dropdown>
     </div>
     <div class="form-group">
-        <button type="button" class="btn btn-default btn-block" (click)="modalBestandteile.open('lg')">Bestandteile</button>
+        <button type="button" class="btn btn-default btn-block" (click)="modalBestandteile.open()">Bestandteile</button>
     </div>
     <div class="form-group">
         <button type="button" class="btn btn-default btn-block" (click)="modalArbeitsplaetze.open('lg')">Arbeitsplätze</button>
@@ -91,36 +103,31 @@
         <h4 class="modal-title">Bestandteile auswählen</h4>
     </modal-header>
     <modal-body>
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="panel panel-warning">
-                    <div class="panel-heading">
-                        Verfügbare Teile
-                    </div>
-                    <div class="panel-body" dnd-sortable-container [dropZones]="['teileDropZone']" [sortableData]="listVerfuegbareTeile">
-                        <ul class="list-group" >
-                            <li *ngFor="let verfPart of listVerfuegbareTeile; let i = index" class="list-group-item" dnd-sortable [sortableIndex]="i">
-                                {{verfPart.typ + verfPart.nummer + "-" + verfPart.bezeichnung + " - " + verfPart.verwendung}}
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+        <div class="parts-list" align="center">
+            <div class="col-md-2">
+                Auswahl
             </div>
-            <div class="col-lg-6">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                       Bestandteile von xy
-                    </div>
-                    <div class="panel-body" dnd-sortable-container [dropZones]="['teileDropZone']" [sortableData]="listBestandteile">
-                        <ul class="list-group" >
-                            <li *ngFor="let bestPart of listBestandteile; let i = index" class="list-group-item" dnd-sortable [sortableIndex]="i">
-                                {{bestPart.typ + bestPart.nummer + "-" + bestPart.bezeichnung + " - " + bestPart.verwendung}}
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="col-md-6">
+                Teil
             </div>
-        </div>`
+            <div class="col-md-4">
+                Anzahl
+            </div>
+            <br><br>
+            <div *ngFor="let pts of parts">
+                <div class="col-md-2">
+                    <input type="checkbox" [checked]="checkedParts[pts.nummer]" (click)="updateCheckedStatus(2,pts)">
+                </div>
+                <div class="col-md-6" align="left">
+                    {{pts.nummer + " - " + pts.bezeichnung}}
+                </div>
+                <div class="col-md-4">
+                    <input type="number" min="1" [(ngModel)]="anzahl[pts.nummer]" name="anzahl"
+                           class="form-control" placeholder="Anzahl">
+                </div>
+                <br><br>
+            </div>
+        </div>
     </modal-body>
     <modal-footer>
         <button type="button" class="btn btn-primary" (click)="modalBestandteile.close()">Ok</button>
@@ -151,7 +158,7 @@
             <br><br>
             <div *ngFor="let ws of workstations">
                 <div class="col-md-1">
-                    <input type="checkbox" [checked]="checkedAP[ws.nummer]" (click)="updateCheckedStatus(ws)">
+                    <input type="checkbox" [checked]="checkedAP[ws.nummer]" (click)="updateCheckedStatus(1,ws)">
                 </div>
                 <div class="col-md-4" align="left">
                     {{ws.nummer + " - " + ws.name}}
