--- a/client/app/components/settings/parts/parts.component.html
+++ b/client/app/components/settings/parts/parts.component.html
@@ -1,55 +1,55 @@
 <div class="well col-md-3" style="margin-left: 1%; margin-right: 1%;">
     <div class="form-group">
-        <label for="part_nummer">Nummer</label>
-        <input type="number" [(ngModel)]="part.nummer" name="nummer" class="form-control" placeholder="Nummer" id="part_nummer">
-    </div>
-    <div class="form-group">
-        <label for="part_bez">{{'setWorkstations_name' | translate}}</label>
-        <input type="text" [(ngModel)]="part.bezeichnung" name="bezeichnung" class="form-control" placeholder="Bezeichnung" id="part_bez">
-    </div>
-    <div class="form-group">
-        <label for="part_wert">Wert</label>
-        <input type="number" min="1" [(ngModel)]="part.wert" name="wert" class="form-control" placeholder="Wert" id="part_wert">
-    </div>
-    <div class="form-group">
-        <label for="part_nummer">Lagermenge</label>
-        <input type="number" [(ngModel)]="part.lagerMenge" name="lagermenge" class="form-control" placeholder="Lagermenge" id="part_lagermenge">
-    </div>
-    <div class="form-group">
-        <label for="part_lieferfrist">Lieferfrist</label>
-        <input type="number" [(ngModel)]="part.lieferfrist" name="lieferfrist" class="form-control" placeholder="Lieferfrist" id="part_lieferfrist">
-    </div>
-    <div class="form-group">
-        <label for="part_abweichung">Abweichung</label>
-        <input type="number" [(ngModel)]="part.abweichung" name="abweichung" class="form-control" placeholder="Abweichung" id="part_abweichung">
-    </div>
-    <div class="form-group">
-        <label for="part_diskontmenge">Diskontmenge</label>
-        <input type="number" [(ngModel)]="part.diskontmenge" name="diskontmenge" class="form-control" placeholder="Diskontmenge" id="part_diskontmenge">
-    </div>
-    <div class="form-group">
         <label for="part_typ">Typ </label>
         <ss-multiselect-dropdown [options]="typOptions" [texts]="multiSelectTexts" [settings]="typSettings"
                                  [(ngModel)]="part.typ" id="part_typ">
         </ss-multiselect-dropdown>
     </div>
-    <div class="form-group">
+    <div class="form-group"  [hidden]="!(part.typ != undefined && part.typ.length > 0)">
+        <label for="part_nummer">Nummer</label>
+        <input type="number" [(ngModel)]="part.nummer" name="nummer" class="form-control" placeholder="Nummer" id="part_nummer">
+    </div>
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
+        <label for="part_bez">{{'setWorkstations_name' | translate}}</label>
+        <input type="text" [(ngModel)]="part.bezeichnung" name="bezeichnung" class="form-control" placeholder="Bezeichnung" id="part_bez">
+    </div>
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
+        <label for="part_wert">Wert</label>
+        <input type="number" min="1" [(ngModel)]="part.wert" name="wert" class="form-control" placeholder="Wert" id="part_wert">
+    </div>
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
+        <label for="part_nummer">Lagermenge</label>
+        <input type="number" [(ngModel)]="part.lagerMenge" name="lagermenge" class="form-control" placeholder="Lagermenge" id="part_lagermenge">
+    </div>
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] == '3' && part.typ[0] != undefined)">
+        <label for="part_lieferfrist">Lieferfrist</label>
+        <input type="number" [(ngModel)]="part.lieferfrist" name="lieferfrist" class="form-control" placeholder="Lieferfrist" id="part_lieferfrist">
+    </div>
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] == '3' && part.typ[0] != undefined)">
+        <label for="part_abweichung">Abweichung</label>
+        <input type="number" [(ngModel)]="part.abweichung" name="abweichung" class="form-control" placeholder="Abweichung" id="part_abweichung">
+    </div>
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] == '3' && part.typ[0] != undefined)">
+        <label for="part_diskontmenge">Diskontmenge</label>
+        <input type="number" [(ngModel)]="part.diskontmenge" name="diskontmenge" class="form-control" placeholder="Diskontmenge" id="part_diskontmenge">
+    </div>
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
         <label for="part_verwendung">Verwendung </label>
         <ss-multiselect-dropdown [options]="verwOptions" [texts]="multiSelectTexts" [settings]="verwSettings"
                                  [(ngModel)]="part.verwendung" id="part_verwendung">
         </ss-multiselect-dropdown>
     </div>
-    <div class="form-group">
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] != '3' && part.typ[0] != undefined)">
         <button type="button" class="btn btn-default btn-block" (click)="modalBestandteile.open()">Bestandteile</button>
     </div>
-    <div class="form-group">
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] != '3' && part.typ[0] != undefined)">
         <button type="button" class="btn btn-default btn-block" (click)="modalArbeitsplaetze.open('lg')">Arbeitsplätze</button>
     </div>
 
-    <div class="form-group" align="right">
+    <div class="form-group" align="right" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
         <button type="button" class="btn btn-danger">
             Zurücksetzen</button>
-        <button type="button" class="btn btn-success" (click)="test()">
+        <button type="button" class="btn btn-success" (click)="updatePart($event)">
             Hinzufügen
         </button>
     </div>
@@ -87,7 +87,7 @@
             </td>
             <td width="12.5%" style="padding-right: 5px" align="right">
                 <input type="button"  value="{{'setWorkstations_edit' | translate}}"
-                       class="btn btn-info">
+                       class="btn btn-info" (click)="setPart(pt)">
             </td>
             <td width="12.5%" style="padding-left: 5px" align="left">
                 <input type="button"  value="{{'setWorkstations_delete' | translate}}"
@@ -182,5 +182,27 @@
     </modal-body>
     <modal-footer>
         <button type="button" class="btn btn-primary" (click)="modalArbeitsplaetze.close()">Ok</button>
+    </modal-footer>
+</modal>
+<modal #modalPartExists>
+    <modal-header [show-close]="true">
+        <h4 class="modal-title">{{'setWorkstations_exists' | translate}}</h4>
+    </modal-header>
+    <modal-body>
+        {{'setWorkstations_number' | translate}} {{part.nummer}} {{'setWorkstations_exists_body' | translate}}
+    </modal-body>
+    <modal-footer>
+        <button type="button" class="btn btn-primary" (click)="modalPartExists.close()">Ok</button>
+    </modal-footer>
+</modal>
+<modal #modalPartEmpty>
+    <modal-header [show-close]="true">
+        <h4 class="modal-title">{{'setWorkstations_empty' | translate}}</h4>
+    </modal-header>
+    <modal-body>
+        {{'setWorkstations_empty_body' | translate}}
+    </modal-body>
+    <modal-footer>
+        <button type="button" class="btn btn-primary" (click)="modalPartEmpty.close()">Ok</button>
     </modal-footer>
 </modal>
