Admin Parts ready w/o translation

--- a/client/app/components/settings/parts/parts.component.html
+++ b/client/app/components/settings/parts/parts.component.html
@@ -91,7 +91,7 @@
             </td>
             <td width="12.5%" style="padding-left: 5px" align="left">
                 <input type="button"  value="{{'setWorkstations_delete' | translate}}"
-                       class="btn btn-danger">
+                       class="btn btn-danger" (click)="deletePart(pt)">
             </td>
         </tr>
         </tbody>
